<resources>
    <string name="app_name">SmallGallery</string>
    <string name="button_animals">Animals</string>
    <string name="button_space">Space and Time</string>
    <string name="button_nature">Nature</string>
    <string name="button_arch">Modern Architecture</string>
    <string name="button_cyber">CyberPunk</string>
    <string name="button_science">Science</string>
    <string name="animal_descrip">\n For many people cats and dogs are more than just pets. They can be faithful friends and real family members. Active joyful dogs and independent proud cats — they’re so different, but we love both of them just the way they are.</string>
    <string name="space_descrip">\n Space and time are universal forms of the existence of matter, the coordination of objects. The universality of these forms lies in the fact that they are forms of existence of all the objects and processes that have ever existed or will exist in the infinite universe. Not only the events of the external world, but also all feelings and thoughts take place in space and time. In the material world everything has extension and duration. Space and time have their peculiarities. Space has three dimensions: length, breadth and height, but time has only one—from the past through the present to the future. It is inevitable, unrepeatable and irreversible.\n\n
        Correct understanding of the essence of space and time is closely connected with the scientific picture of the world. Everything is differentiated, broken down into relatively stable extraposed material formations. The processes that occur in them and condition their conservation (reproduction) and at the same time their transformation, are also differentiated: they constitute the consecutive change of the states of an object.\n\n
        Space and time exist objectively. Although we may feel how time in its inexorable passage is carrying us away, we can neither halt nor prolong it. We cannot recover a single moment of existence. The flow of time is beyond our control. We are as helpless in it as a chip of wood in a river.\n\n
        Dialectics proceeds from acknowledgement of the unity of motion, space, time and matter, which is expressed in the principle that various forms of the structural organisation of matter and the levels of this organisation are characterised by their specific motion, space and time. Thus the spatial organisation of a crystal differs from that of a blossoming rose. The time of historical events occurs, is experienced by their participants and is preserved in the memory of mankind and this kind of time differs from the purely physical time of, say, the motion of the celestial bodies. However, metaphysical thought separates matter from motion, and both of them, from space and time. Newton, for example, assumed that space was the empty container of things, that it was incorporeal, absolutely penetrable, never influenced anything and was never affected by any influence.\n\n
        Universal space was considered to be filled with absolutely motionless ether, and moving bodies were thought to encounter an "ethereal wind" like the wind that resists a running person. Space was allegedly immutable and motionless, its attributes did not depend on anything, even time; nor did they depend on material bodies or their motion. One could remove all bodies from space and space would still exist and retain its attributes. Newton held the same views about time. He believed that time flowed by in the same way throughout the universe and this flow did not depend on anything; time was therefore absolute. Like a river, it flowed on of its own accord, heedless of the existence of material processes.</string>
    <string name="nature_descrip">\n Our Earth is so beautiful. There, are a lot of blue rivers and lakes on the Earth. Its oceans are full of wonders. There are high mountains covered with snow and wonderful fields and forests full of different plants and animals. The sun shines high up in the blue sky.</string>
    <string name="arch_descrip">\n Modern architecture, or modernistic architecture, is architecture defined by the use of innovative and new construction technologies, especially the use of steel, reinforced concrete, and glass. The central idea in modern architecture is that form should follow function and embrace minimalism. There is also a clear rejection of ornament in modernistic architecture.\n\n

    Modern architecture became dominant after the 2nd World War when it was taken as the main style for corporate and institutional buildings.\n\n
    The modern architecture movement started at the end of the 19th century. During this period, there was a revolution of technology, building materials, and engineering. The building construction industry moved away from traditional architectural styles to invent something functional and new. Modern architecture then first embraced the use of plate glass, cast iron and reinforced concrete in building stronger taller and lighter structures. </string>

    <string name="science_descrip">\n Science is defined as the observation, identification, description, experimental investigation, and theoretical explanation of natural phenomena.\n\n
    The word Science comes from Latin word "scientia" meaning "knowledge" and in the broadest sense it is any systematic knowledge-base or prescriptive practice capable of resulting in prediction. Science can also be understood as a highly skilled technique or practice. In more contemporary terms, science is a system of acquiring knowledge based on the scientific process or method in order to organize a body of knowledge gained through research.\n\n
    Science is a continuing effort to discover and increase knowledge through research. Scientists make observations, record measureable data related to their observations, and analyze the information at hand to construct theoretical explanations of the phenomenon involved.</string>
    <string name="cyber_descrip">\n Cyberpunk is a subgenre of science fiction in a dystopian futuristic setting that tends to focus on a \"combination of low-life and high tech\" featuring advanced technological and scientific achievements, such as artificial intelligence and cybernetics, juxtaposed with a degree of breakdown or radical change in the social order. Much of cyberpunk is rooted in the New Wave science fiction movement of the 1960s and 1970s, when writers like Philip K. Dick, Roger Zelazny, John Brunner, J. G. Ballard, Philip José Farmer and Harlan Ellison examined the impact of drug culture, technology, and the sexual revolution while avoiding the utopian tendencies of earlier science fiction.\\n\\n
        Comics exploring cyberpunk themes began appearing as early as Judge Dredd, first published in 1977. Released in 1984, William Gibson\'s influential debut novel Neuromancer would help solidify cyberpunk as a genre, drawing influence from punk subculture and early hacker culture. Other influential cyberpunk writers included Bruce Sterling and Rudy Rucker. The Japanese cyberpunk subgenre began in 1982 with the debut of Katsuhiro Otomo\'s manga series Akira, with its 1988 anime film adaptation later popularizing the subgenre.</string>
</resources>